# xmrig-wasm

./: .gitignore  CMakeLists.txt  CMakeLists_full.txt  DEVELOPMENT_PLAN.md  IMPLEMENTATION.md  INTEGRATION.md  PROGRESS.md  PUSH_TO_GITHUB.md  RANDOMX_MODIFICATIONS.md  README.md  build-wasm.sh
.github/workflows/: build.yml
demo/: index.html
src/: minimal_randomx_miner.cpp  randomx_wasm.cpp  randomx_wasm.h  stratum_client.cpp  stratum_client.h  wasm_main.cpp  xmrig-wasm-wrapper.js  xmrig-worker.js  xmrig_wasm_miner.cpp
src/json/: simple_json.h
src/wasm_compat/: VirtualMemory_wasm.cpp  dataset_wasm.cpp  jit_compiler_wasm.cpp
